# LLMSpanish

./: .gitignore  README.md  env.example.txt  pyproject.toml
docs/: cloud-providers.md  hardware.md  llm-benchmark.md  protocol.md  roadmap.md
docs/superpowers/plans/: 2026-06-22-auto-endpointing-vad.md  2026-06-22-web-search-tool.md
docs/superpowers/specs/: 2026-06-22-auto-endpointing-vad-design.md  2026-06-22-web-search-tool-design.md
scripts/: bench_llm.py  generate_canned.py  metrics.py  record_sample.py  test_stt_live.py  test_stt_whisper.py  test_tts_cartesia.py  test_tts_piper.py  try_voices.py
src/electronbot_es/: __init__.py
src/electronbot_es/adapters/: llm_claude.py  llm_groq.py  llm_ollama.py  search_tavily.py  stt_deepgram.py  stt_whisper.py  tts_cartesia.py  tts_piper.py
src/electronbot_es/core/: agentic.py  config.py  cost.py  messages.py  obs.py  orchestrator.py  persona.py  protocols.py
src/electronbot_es/mock/: endpointer.py  mock_esp32.py  wake_word.py
src/electronbot_es/router/: __init__.py  canned_responses.yaml  intent_router.py
src/electronbot_es/router/templates/: __init__.py  datetime_handlers.py
src/electronbot_es/server/: app.py
tests/: test_agentic.py  test_endpointer.py  test_intent_router.py  test_llm_groq_tools.py  test_search_tavily.py  test_stt_protocol_conformance.py  test_ws_protocol.py
