[project]
name = "electronbot-es"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Juan Silva", email = "79547422+FryFr@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.94.1",
    "cartesia>=3.0.2",
    "deepgram-sdk>=3.10,<4",
    "fastapi>=0.135.3",
    "faster-whisper>=1.2.1",
    "groq>=1.1.2",
    "httpx>=0.28.1",
    "numpy>=2.4.4",
    "ollama>=0.6.1",
    "openwakeword>=0.4.0",
    "piper-tts>=1.4.2",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.44.0",
    "webrtcvad-wheels>=2.0.14",
    "websockets>=16.0",
]

[project.scripts]
electronbot-es = "electronbot_es:main"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
